--- a/esempio-javafx/src/main/resources/com/example/esempiojavafx/hello-view.fxml
+++ b/esempio-javafx/src/main/resources/com/example/esempiojavafx/hello-view.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.VBox?>
 
 <VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.esempiojavafx.HelloController">
@@ -12,6 +11,6 @@
     </padding>
 
     <Label fx:id="welcomeText" text="Prova Interfaccia Grafica" />
-   <ListView prefHeight="200.0" prefWidth="200.0" />
+   <Label fx:id="personeLabel" text="Label" />
     <Button fx:id="addPersonaButton" onAction="#onAddPersonaButtonClick" text="Aggiungi persona" />
 </VBox>
