--- a/esempio-javafx/src/main/resources/com/example/esempiojavafx/hello-view.fxml
+++ b/esempio-javafx/src/main/resources/com/example/esempiojavafx/hello-view.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
 
 <VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.esempiojavafx.HelloController">
@@ -12,5 +13,6 @@
 
     <Label fx:id="welcomeText" text="Prova Interfaccia Grafica" />
    <Label fx:id="personeLabel" text="Label" />
+   <TextField fx:id="nomeTextField" promptText="nome" />
     <Button fx:id="addPersonaButton" onAction="#onAddPersonaButtonClick" text="Aggiungi persona" />
 </VBox>
